<resources>
    <string name="app_name">AcademyApplication</string>
    <string name="movie_name">Avengers:\nEnd Game</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="movie_description_header">Storyline</string>
    <string name="after_the_d">
        After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.
    </string>
    <string name="movie_actors_header">Cast</string>
    <string name="some_id">13+</string>
    <string name="back">Back</string>
    <string name="review">125 Reviews</string>
    <string name="robert_down">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffal">Mark Ruffalo</string>
    <string name="chris_hemsw">Chris Hemsworth</string>
    <string name="movie_image_name">movie image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warszawa_po">Movies list</string>
    <string name="item_movie_name">Avengers: End Game</string>
    <string name="item_movie_time">137 min</string>
    <string name="item_movie_age" >13+</string>
</resources>