<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#191926"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/movie_image_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/header_background" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingTop="59dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/path_back" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="2sp"
            android:paddingLeft="8dp"
            android:paddingTop="56dp"
            android:text="@string/back"
            android:textAppearance="@style/back"
            app:layout_constraintStart_toEndOf="@id/img_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/some_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal|center_vertical"
            android:paddingStart="16dp"
            android:paddingBottom="12dp"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            app:layout_constraintBottom_toTopOf="@id/movie_name" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/movie_name"
            android:textAppearance="@style/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/movie_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/tag"
            android:textAppearance="@style/tag"
            app:layout_constraintTop_toBottomOf="@id/movie_name" />


        <ImageView
            android:id="@+id/img_star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/movie_tag"
            app:srcCompat="@drawable/star_fill" />

        <ImageView
            android:id="@+id/img_star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingTop="8dp"
            app:layout_constraintStart_toEndOf="@id/img_star_1"
            app:layout_constraintTop_toBottomOf="@id/movie_tag"
            app:srcCompat="@drawable/star_fill" />

        <ImageView
            android:id="@+id/img_star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingTop="8dp"
            app:layout_constraintStart_toEndOf="@id/img_star_2"
            app:layout_constraintTop_toBottomOf="@id/movie_tag"
            app:srcCompat="@drawable/star_fill" />

        <ImageView
            android:id="@+id/img_star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingTop="8dp"
            app:layout_constraintStart_toEndOf="@id/img_star_3"
            app:layout_constraintTop_toBottomOf="@id/movie_tag"
            app:srcCompat="@drawable/star_fill" />

        <ImageView
            android:id="@+id/img_star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingTop="8dp"
            app:layout_constraintStart_toEndOf="@id/img_star_4"
            app:layout_constraintTop_toBottomOf="@id/movie_tag"
            app:srcCompat="@drawable/star_not_fill" />

        <!-- Review -->
        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:text="@string/review"
            android:textAppearance="@style/review"
            app:layout_constraintStart_toEndOf="@id/img_star_5"
            app:layout_constraintTop_toBottomOf="@id/movie_tag" />

        <!-- Story -->
        <TextView
            android:id="@+id/movie_header_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:paddingLeft="16dp"
            android:paddingTop="32dp"
            android:paddingRight="16dp"
            android:text="@string/movie_description_header"
            android:textAppearance="@style/header_description"
            app:layout_constraintTop_toBottomOf="@id/movie_tag" />

        <TextView
            android:id="@+id/after_the_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:text="@string/after_the_d"
            android:textAppearance="@style/after_the_d"
            app:layout_constraintTop_toBottomOf="@id/movie_header_description" />


        <!-- Actors -->
        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="16dp"
            android:text="@string/movie_actors_header"
            android:textAppearance="@style/header_actors"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/after_the_d" />

        <ImageView
            android:id="@+id/img_actor_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="2dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@+id/img_actor_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:srcCompat="@drawable/actor_1" />

        <ImageView
            android:id="@+id/img_actor_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@+id/img_actor_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_actor_1"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:srcCompat="@drawable/actor_2" />

        <ImageView
            android:id="@+id/img_actor_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@+id/img_actor_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_actor_2"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:srcCompat="@drawable/actor_3" />

        <ImageView
            android:id="@+id/img_actor_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_actor_3"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:srcCompat="@drawable/actor_4" />

        <TextView
            android:id="@+id/tv_actor_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:minLines="2"
            android:paddingTop="6dp"
            android:text="@string/robert_down"
            android:textAppearance="@style/robert_down"
            app:layout_constraintEnd_toEndOf="@id/img_actor_1"
            app:layout_constraintStart_toStartOf="@id/img_actor_1"
            app:layout_constraintTop_toBottomOf="@id/img_actor_1" />

        <TextView
            android:id="@+id/tv_actor_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:minLines="2"
            android:paddingLeft="8dp"
            android:paddingTop="6dp"
            android:text="@string/chris_evans"
            android:textAppearance="@style/chris_evans"
            app:layout_constraintEnd_toEndOf="@id/img_actor_2"
            app:layout_constraintStart_toStartOf="@id/img_actor_2"
            app:layout_constraintTop_toBottomOf="@id/img_actor_2" />

        <TextView
            android:id="@+id/tv_actor_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:minLines="2"
            android:paddingLeft="8dp"
            android:paddingTop="6dp"
            android:text="@string/mark_ruffal"
            android:textAppearance="@style/mark_ruffal"
            app:layout_constraintEnd_toEndOf="@id/img_actor_3"
            app:layout_constraintStart_toStartOf="@id/img_actor_3"
            app:layout_constraintTop_toBottomOf="@id/img_actor_3" />

        <TextView
            android:id="@+id/tv_actor_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:minLines="2"
            android:paddingLeft="8dp"
            android:paddingTop="6dp"
            android:text="@string/chris_hemsw"
            android:textAppearance="@style/chris_hemsw"
            app:layout_constraintEnd_toEndOf="@id/img_actor_4"
            app:layout_constraintStart_toStartOf="@id/img_actor_4"
            app:layout_constraintTop_toBottomOf="@id/img_actor_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>