<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_movie_list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/item_movies_list_border">


    <!--<View
        android:id="@+id/mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/mask"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />-->

    <ImageView
        android:id="@+id/item_movie_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:background="@drawable/round_outline"
        android:contentDescription="@string/movie_image_name"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/item_movie_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movie_avangers_end_game" />

    <ImageView
        android:id="@+id/item_movie_image_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:background="@drawable/round_outline"
        android:contentDescription="@string/movie_image_name"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/item_movie_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moview_list_image_mask" />

    <TextView
        android:id="@+id/movie_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/tag"

        android:textAppearance="@style/moview_list_tag"
        app:layout_constraintBottom_toTopOf="@id/img_star_1" />


    <ImageView
        android:id="@+id/img_star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@id/item_movie_image"
        app:srcCompat="@drawable/star_fill" />

    <ImageView
        android:id="@+id/img_star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@id/item_movie_image"
        app:layout_constraintStart_toEndOf="@id/img_star_1"
        app:srcCompat="@drawable/star_fill" />

    <ImageView
        android:id="@+id/img_star_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@id/item_movie_image"
        app:layout_constraintStart_toEndOf="@id/img_star_2"
        app:srcCompat="@drawable/star_fill" />

    <ImageView
        android:id="@+id/img_star_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@id/item_movie_image"
        app:layout_constraintStart_toEndOf="@id/img_star_3"
        app:srcCompat="@drawable/star_fill" />

    <ImageView
        android:id="@+id/img_star_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@id/item_movie_image"
        app:layout_constraintStart_toEndOf="@id/img_star_4"
        app:srcCompat="@drawable/star_not_fill" />

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:lineSpacingExtra="3sp"
        android:paddingLeft="6dp"
        android:paddingBottom="8dp"
        android:text="@string/review"
        android:textAppearance="@style/item_movies_list_review"
        app:layout_constraintBottom_toBottomOf="@id/item_movie_image"
        app:layout_constraintStart_toEndOf="@id/img_star_5"
        app:layout_constraintTop_toBottomOf="@id/movie_tag" />


    <!-- Movie name -->
    <TextView
        android:id="@+id/item_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/item_movie_name"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/item_movie_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Time -->
    <TextView
        android:id="@+id/item_movie_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/item_movie_time"
        android:textAppearance="@style/item_movie_time"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="@id/item_movie_name"
        app:layout_constraintTop_toBottomOf="@id/item_movie_name" />

    <View
        android:id="@+id/item_movie_like"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="13dp"
        android:layout_marginRight="8dp"
        android:alpha="0.75"
        android:background="@drawable/ic_like"
        android:scaleType="matrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:alpha="0.9"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/item_movie_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/item_movie_age"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/item_movie_age" />

    <!--<TextView
        android:id="@+id/item_movie_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/item_movie_age"
        android:background="#191926"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:paddingTop="4dp"
        android:paddingLeft="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/item_movie_age"
        android:gravity="center_horizontal|center_vertical"
        />-->

</androidx.constraintlayout.widget.ConstraintLayout>